frame/support/test/tests/derive_no_bound_ui/clone.rs
trait Trait {
	type C;
}

#[derive(frame_support::CloneNoBound)]
struct Foo<T: Trait> {
	c: T::C,
}

fn main() {}
